added Dockerfile, some changes